# rust-rocket-sqlx-sample

./: .env.example  Cargo.toml  LICENSE.md  README.md  Rocket.toml  docker-compose.yml  migrate.sh
migrations/: 20230922092231_first.down.sql  20230922092231_first.up.sql
src/: app.rs  app_state.rs  config.rs  db.rs  main.rs  model.rs  repo.rs  usecase.rs
src/controllers/: product_controller.rs  user_controller.rs
src/dto/: product_dto.rs  user_dto.rs
src/error/: app_error.rs  logging.rs
src/models/: product_model.rs  user_model.rs
src/repositories/: error.rs  product_repo.rs  repositories.rs  user_repo.rs
src/test/: app.rs  app_state.rs  db.rs
src/test/fixture/: product.rs  user.rs
src/test/repositories/prepare/: product.rs  user.rs
src/use_cases/: product_use_case.rs  use_cases.rs  user_use_case.rs
