[package]
name = "rust-rocket-sqlx-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres", "deadpool_redis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
tokio = {version = "1.30.0", features = ["full"]}
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
sqlx = { version = "0.6", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono"] }
mockall = "0.11"